--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/xlsx": "^0.0.36",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "xlsx": "^0.18.5"
   }
 }
